firefly-iii/firefly-iii-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    app: firefly-iii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly-iii
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      containers:
        - image: fireflyiii/core
          name: firefly-iii
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: firefly-iii-export-storage
              mountPath: /var/www/firefly-iii/storage/export
            - name: firefly-iii-upload-storage
              mountPath: /var/www/firefly-iii/storage/upload
      volumes:
        - name: firefly-iii-export-storage
          persistentVolumeClaim:
            claimName: firefly-iii-export
        - name: firefly-iii-upload-storage
          persistentVolumeClaim:
            claimName: firefly-iii-upload
