firefly-iii/firefly-iii-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    app: firefly-iii
spec:
  selector:
    app: firefly-iii
  type: ClusterIP
  ports:
   - port: 80
     name: http
