firefly-iii/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  namespace: firefly-iii
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50G"
    cert-manager.io/issuer: prod
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-ingress-class: "public"
spec:
  rules:
   - host: finance.lesquerra.cat
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: firefly-iii
              port:
                number: 8080
  tls:
    - hosts:
      - finance.lesquerra.cat
      secretName: tlssecret
